--- a/emprestimos.html
+++ b/emprestimos.html
@@ -582,10 +582,10 @@
     <div id="notification-container"></div>
 
     <nav id="main-nav">
-        <!-- UPDATED: Set "active" class on the current page's link -->
         <a href="index.html">Patrimônio Estelar</a>
         <a href="emprestimos.html" class="active">Empréstimos CosmoFin</a>
         <a href="gastos.html">Gastos Cósmicos</a>
+        <a href="linkine.html">Linkine</a>
     </nav>
 
     <main id="page-content-area">
