--- a/gastos.html
+++ b/gastos.html
@@ -443,9 +443,10 @@
     <div id="notification-container"></div>
 
     <nav id="main-nav">
-        <a href="patrimonio.html"><button>Patrimônio Estelar</button></a>
-        <a href="index.html"><button>Empréstimos CosmoFin</button></a>
-        <a href="gastos.html"><button class="active">Gastos Cósmicos</button></a>
+        <a href="index.html">Patrimônio Estelar</a>
+        <a href="emprestimos.html">Empréstimos CosmoFin</a>
+        <a href="gastos.html" class="active">Gastos Cósmicos</a>
+        <a href="linkine.html">Linkine</a>
     </nav>
 
     <main id="page-gastos">
