--- a/index.html
+++ b/index.html
@@ -675,8 +675,9 @@
         <a href="index.html" class="active">Patrimônio Estelar</a>
         <a href="emprestimos.html">Empréstimos CosmoFin</a>
         <a href="gastos.html">Gastos Cósmicos</a>
+        <a href="linkine.html">Linkine</a>
     </nav>
-
+    
     <main id="page-content-area">
         <!-- Page: Patrimônio (This is the only page content in this file) -->
         <div id="page-patrimonio" class="page-view">
